--- a/cv/index.html
+++ b/cv/index.html
@@ -76,22 +76,22 @@
 </h2>
 <ul>
 <li>
-<span class="cit"><code>C</code> <code>$</code> ▩ </span><span class="date"><code>2021/06—2021/10</code></span> <a href="http://www.compositional-it.com"><strong>Compositional</strong></a> ☞ Review of <a href="https://safe-stack.github.io/">SAFE Stack</a> training material; slides, demos and labs.
+<span class="cit"><code>C</code> <code>$</code> ▩ </span><span class="date"><code>2021/06—2021/10</code></span> <a href="http://www.compositional-it.com"><strong>Compositional</strong></a> ☞ Review slides, demos and labs of <a href="https://safe-stack.github.io/">SAFE Stack</a> training.
 </li>
 <li>
-<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ Develop a prototype for interpreting <a href="https://www.contrastultrasound-modality.com/index.php">contrast-enhanced ultrasound</a>.
+<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ Prototype an app for interpreting <a href="https://www.contrastultrasound-modality.com/index.php">contrast-enhanced ultrasound</a>.
 </li>
 <li>
-<span class="flaretiming"><code>F</code> <code>?</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> ☞ For scoring hang gliding and paragliding competitions; <a href="https://github.com/BlockScope/CIVL-GAP#readme">typeset the rules</a> as LaTeX • <a href="https://github.com/BlockScope/CIVL-GAP/issues">question</a> how to interpret some rules • develop a command line <a href="https://github.com/BlockScope/flare-timing#readme">reference implementation</a> • develop web visualizations of workings, results and discrepencies across implementations • find, raise and fix bugs in the official implementation, <a href="http://fs.fai.org/">FS</a> • rescore and publish competitions.
+<span class="flaretiming"><code>F</code> <code>?</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> scoring flying competitions ☞ Ask <a href="https://github.com/BlockScope/CIVL-GAP/issues">how</a> how to interpret some <a href="https://github.com/BlockScope/CIVL-GAP#readme">rules</a> typesetting them in LaTeX. Develop a <a href="https://github.com/BlockScope/flare-timing#readme">reference</a> implementation. Publish comparisons of implementations.
 </li>
 <li>
-<span class="aqualinc"><code>A</code> <code>$</code> ▩ </span><span class="date"><code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> ☞ For monitoring breaches of regulated levels of water take and pollutant discharge; design a relational database schema • unmunge munged data, develop system services to pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a> web services • expose web services over the top of the relational and time series data • develop separate web frontends for administrators and farmers • generate annual reports by pulling data from web services and typeset with LaTeX.
+<span class="aqualinc"><code>A</code> <code>$</code> ▩ </span><span class="date"><code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> monitoring breaches of regulated levels of water take and pollutant discharge ☞ Design a database schema, unmunging and migrating data. Pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a>. Expose web services over relational and time series data. Develop web apps for admins and farmers. Pull data and emit LaTeX to typeset PDF reports.
 </li>
 <li>
 <span class="tagly"><code>G</code> <code>$</code> ▩ </span><span class="date"><code>2012/07—2012/12</code></span> <a href="https://angel.co/company/tagly"><strong>Tagly</strong></a> ☞ Develop server and browser components of a live feed.
 </li>
 <li>
-<span class="apress"><code>P</code> <code>#</code> ▩ </span><span class="date"><code>2012/06—2015/11</code></span> <a href="https://www.apress.com"><strong>Apress</strong></a> ☞ Technical review of Expert F# books, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.
+<span class="apress"><code>P</code> <code>#</code> ▩ </span><span class="date"><code>2012/06—2015/11</code></span> <a href="https://www.apress.com"><strong>Apress</strong></a> Expert F# books ☞ Technical review of editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.
 </li>
 <li>
 <span class="travieo"><code>V</code> <code>#</code> ▩ </span><span class="date"><code>2011/08—2015/10</code></span> <a href="http://www.travieo.com"><strong>Travieo</strong></a> ☞ Develop a travel booking website.
@@ -107,7 +107,7 @@
 <span class="cactus"><code>C</code> <code>#</code> ▩ </span><span class="date"><code>2012/08—2013/02</code></span> <a href="https://www.cactusoutdoor.co.nz/"><strong>Cactus</strong> Outdoor</a> ☞ Scope upgrading a production planning system for factory operations.
 </li>
 <li>
-<span class="croplogic"><code>L</code> <code>$</code> ▩ </span><span class="date"><code>2008/01—2011/08</code></span> <em>CropLogic</em> ☞ For more potato yield with less water and fertilizer input and less pollutant runoff; port, tune and test a discrete event simulation crop model with scientists • pull in field data and external weather data from numerous and disparate sources • develop a website for growers to setup their crops to enter their irrigation and fertilizer applications and to view the model recommended future inputs and expected yields.
+<span class="croplogic"><code>L</code> <code>$</code> ▩ </span><span class="date"><code>2008/01—2011/08</code></span> <em>CropLogic</em> ☞ Port, tune and test a discrete event simulation crop model with scientists. Ingest field and weather data. Develop a website for growers to setup their soil proﬁle, cultivar, irrigation and fertilizer applications, recommend inputs and predict yields from async model runs.
 </li>
 <li>
 <span class="waimak"><code>D</code> <code>#</code> ▩ </span><span class="date"><code>2007/12—2011/04</code></span> <a href="http://www.waimakariri.govt.nz"><strong>WDC</strong></a> ☞ Develop a website logging public submissions and scheduling hearing time slots.
@@ -116,7 +116,7 @@
 <span class="nutricentre"><code>N</code> <code>$</code> ▩ </span><span class="date"><code>2003/07—2008/05</code></span> <a href="https://www.naturalproductsonline.co.uk/news/tesco-closes-loss-making-nutricentre-operation/"><strong>NutriCentre</strong></a> ☞ Develop an online store.
 </li>
 <li>
-<span class="niwa"><code>W</code> <code>#</code> ▩ </span><span class="date"><code>2003/06—2007/07</code></span> <a href="http://www.niwa.co.nz"><strong>NIWA</strong></a> ☞ Develop tools and the <a href="http://edenz.niwa.co.nz">EDENZ</a> website for publishing environmental time series data.
+<span class="niwa"><code>W</code> <code>#</code> ▩ </span><span class="date"><code>2003/06—2007/07</code></span> <a href="http://www.niwa.co.nz"><strong>NIWA</strong></a> ☞ Develop <a href="http://edenz.niwa.co.nz">EDENZ</a>, a website for publishing environmental time series data.
 </li>
 </ul>
 </div>
